--- a/css/styles.css
+++ b/css/styles.css
@@ -1,30 +1,208 @@
-body {
-  background-color:#E6E6E6;
-  font-family: Arial, Helvetica, sans-serif;
+
+/** Current palette:
+#A03C78
+#ED8E7C
+#CDF3A2
+#93D9A3
+**/
+div {
+  border: 0;
+  margin: 50px 0 50px 0;
+  padding: 0;
 }
 
-hr {
-  border-color: #5C7AEA;
-  border-radius: 0; /*Need this to stop the dots being chopped in half!! */
-  border-style: dotted none none none;
-  border-width: 7px;
-  height: 0;
-  width: 60px;
+body {
+  font-family: Merriweather, serif;
+  margin: 0;
+  padding: 0;
+  text-align: center;
+  color: #40514E;
+  font-size: 80%;
 }
 
 h1 {
-  color: #14279B;
-  /** Some code for the Google Explora font! **/
-  font-family: 'Explora', cursive;
-  font-size: 48px;
-  font-style: normal;
+  color: #66bfbf;
+  font-family: 'Sacramento', cursive;
+  font-size: 550%;
+  line-height: 1;
+  padding: 25px ;
+  margin: 0;
+}
 
+h2 {
+  color: #66bfbf;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 2.5rem;
+  font-weight: normal;
+  margin: 10px auto 0 auto;
+  padding: 0;
 }
 
 h3 {
-  color: #14279B;
+  color: #11999E;
+  font-family: 'Montserrat', sans-serif;
 }
 
-.profilePic {
+a {
+  color: #11999E;
+  font-family: 'Montserrat', sans-serif;
+  text-decoration: none;
+}
+
+a:hover {
+  color: #EAF6F6;
+}
+
+p {
+  line-height: 2;
+}
+
+hr {
+  border-style: dotted none none;
+  border-width: 6px;
+  border-color: #EAF6F6;
+  height: 0;
+  width: 50px;
+}
+
+.copyright {
+  color: #EAF6F6;
+  margin-bottom: 0;
+  padding: 0;
+  font-size: 0.75rem;
+}
+
+.footer-link {
+  color: #11999E;
+  margin-bottom: 50px;
+}
+
+.genContainers {
+  height: 200px;
+  width: 200px;
+}
+
+.top-container {
+  background-color: #EAF6F6;
+  margin-top: 0;
+  padding-top: 50px;
+  text-align: center;;
+}
+
+.topCloud {
+  left: 15%;
+  margin-top: 50px;
+  position: relative;
+}
+
+.bottomCloud {
+  left: 25%;
+  position: absolute;
+}
+
+.middle-container {
+
+}
+
+.bottom-container {
+  background-color: #66bfbf;
+
+  margin: 25px 0 0 0;
+  padding: 15px 0 15px 0;
+}
+
+.profile {
+  margin-left: auto;
+  margin-right: auto;
+  width: 30%;
+}
+
+.avatar {
+  height: auto;
+  width: 200px;
   border-radius: 100%;
 }
+
+.skills {
+  text-align: center;
+}
+
+.skill-row {
+  line-height: 2;
+  margin:  50px auto 50px auto;
+  text-align: left;
+  width: 50%;
+}
+
+.skill-img-1 {
+  float: left;
+  margin: 0 30px 0 0;
+  width: 25%;
+}
+
+.skill-img-2 {
+  float: right;
+  margin: 0 0 0 30px;
+  width: 25%;
+}
+
+.skill-para {
+  line-height: 2;
+}
+
+.contact-me {
+  margin: auto; /** Need this to keep centred when changing the width */
+  text-align: center;
+  width: 50%;
+}
+
+.footer-link {
+  line-height: 2;
+  padding: 0 10px 0 10px;
+  margin: 0 10px 0 10px;
+  color: #11999E;
+}
+
+.extern-copyright {
+  margin: 0;
+  padding: 0;
+  font-size: 0.75rem;
+}
+
+.btn {
+   background: #11999E;
+   background-image: -webkit-linear-gradient(top, #11999E, #5C9F9F);
+   background-image: -moz-linear-gradient(top, #11999E, #5C9F9F);
+   background-image: -ms-linear-gradient(top, #11999E, #5C9F9F);
+   background-image: -o-linear-gradient(top, #11999E, #5C9F9F);
+   background-image: -webkit-gradient(to bottom, #11999E, #5C9F9F);
+   -webkit-border-radius: 5px;
+   -moz-border-radius: 5px;
+   border-radius: 5px;
+   color: #FFFFFF;
+   font-family: 'Montserrat', sans-serif;
+   padding: 10px;
+   text-decoration: none;
+   display: inline-block;
+   cursor: pointer;
+   text-align: center;
+}
+
+.btn:hover {
+   border: solid #337FED 0;
+   background: #11999E;
+   background-image: -webkit-linear-gradient(top, #11999E, #5C9F9F);
+   background-image: -moz-linear-gradient(top, #11999E, #5C9F9F);
+   background-image: -ms-linear-gradient(top, #11999E, #5C9F9F);
+   background-image: -o-linear-gradient(top, #11999E, #5C9F9F);
+   background-image: -webkit-gradient(to bottom, #11999E, #5C9F9F);
+   -webkit-border-radius: 5px;
+   -moz-border-radius: 5px;
+   border-radius: 5px;
+   text-decoration: none;
+}
+/** Google font code
+font-family: 'Merriweather', serif;
+font-family: 'Montserrat', sans-serif;
+font-family: 'Sacramento', cursive;
+**/
